--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -17,7 +17,7 @@
    <children>
       <MenuBar fx:id="menuBar">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu fx:id="fileMenu" mnemonicParsing="false" text="File">
             <items>
               <MenuItem fx:id="createGameMenu" mnemonicParsing="false" onAction="#createGameDialog" text="Create Game">
                      <accelerator>
