--- a/src/main/resources/fxml/PlayerWindow.fxml
+++ b/src/main/resources/fxml/PlayerWindow.fxml
@@ -8,49 +8,55 @@
 <?import javafx.scene.layout.*?>
 
 <?import org.controlsfx.control.GridView?>
-<SplitPane dividerPositions="0.25, 0.5, 0.75" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.msac.quiz.PlayerController">
+<SplitPane dividerPositions="0.3, 0.6, 0.9" maxHeight="-Infinity" maxWidth="-Infinity"
+           minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0"
+           xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="org.msac.quiz.PlayerController">
  <items>
-    <VBox prefHeight="200.0" prefWidth="100.0">
+    <VBox prefHeight="200.0" prefWidth="300.0">
        <children>
-          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="157.0" text="Question">
+          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="300.0" text="Question">
              <font>
                 <Font size="24.0" />
              </font>
           </Label>
-          <FlowPane fx:id="questionFlowPane" prefHeight="358.0" prefWidth="100.0" rowValignment="TOP">
-              <GridView fx:id="questionGridView" />
+          <FlowPane fx:id="questionFlowPane" prefHeight="358.0" prefWidth="300.0" rowValignment="TOP">
+              <GridView fx:id="questionGridView" cellHeight="60" cellWidth="60" />
+              <Button fx:id="addQuestionButton" onAction="#addQuestionButton_Click" visible="false" text="+" />
           </FlowPane>
        </children>
     </VBox>
-    <VBox prefHeight="200.0" prefWidth="100.0">
+    <VBox prefHeight="200.0" prefWidth="300.0">
        <children>
-          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="156.0" text="Screenshot">
+          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="300.0" text="Screenshot">
              <font>
                 <Font size="24.0" />
              </font>
           </Label>
-          <FlowPane fx:id="screenshotFlowPane" prefHeight="358.0" prefWidth="100.0" rowValignment="TOP">
-              <GridView fx:id="screenshotGridView" />
+          <FlowPane fx:id="screenshotFlowPane" prefHeight="358.0" prefWidth="300.0" rowValignment="TOP">
+              <GridView fx:id="screenshotGridView" cellHeight="60" cellWidth="60" />
+              <Button fx:id="addScreenshotButton" onAction="#addScreenshotButton_Click" visible="false" text="+" />
           </FlowPane>
        </children>
     </VBox>
-    <VBox prefHeight="200.0" prefWidth="100.0">
+    <VBox prefHeight="200.0" prefWidth="300.0">
        <children>
-          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="157.0" text="Music">
+          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="300.0" text="Music">
              <font>
                 <Font size="24.0" />
              </font>
           </Label>
-          <FlowPane fx:id="musicFlowPane" prefHeight="358.0" prefWidth="100.0" rowValignment="TOP">
-              <GridView fx:id="musicGridView" />
+          <FlowPane fx:id="musicFlowPane" prefHeight="358.0" prefWidth="300.0" rowValignment="TOP">
+              <GridView fx:id="musicGridView" cellHeight="60" cellWidth="60" />
+              <Button fx:id="addMusicButton" onAction="#addMusicButton_Click" visible="false" text="+" />
           </FlowPane>
        </children>
     </VBox>
-    <VBox prefHeight="200.0" prefWidth="100.0">
+    <VBox prefHeight="200.0" prefWidth="124.0">
        <children>
-          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="146.0" text="Leaderboard">
+          <Label alignment="TOP_CENTER" prefHeight="36.0" prefWidth="124.0" text="Leaderboard">
              <font>
-                <Font size="24.0" />
+                <Font size="18.0" />
              </font>
           </Label>
        </children>
