--- a/src/main/resources/fxml/EditorWindow.fxml
+++ b/src/main/resources/fxml/EditorWindow.fxml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.text.*?>
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
-<?import javafx.scene.input.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity"
-      minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="240.0" prefWidth="480.0"
-      xmlns="http://javafx.com/javafx/8"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.msac.quiz.EditorController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.msac.quiz.EditorController">
    <children>
-      <GridPane alignment="CENTER_LEFT">
+      <GridPane fx:id="mainGrid" alignment="CENTER_LEFT">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -37,43 +30,55 @@
                     <Font size="16.0" />
                 </font>
             </Label>
+             <HBox fx:id="questionDataContainer" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2">
+                 <children>
+                     <TextField fx:id="questionDataInput">
+                     <HBox.margin>
+                         <Insets right="5.0" />
+                     </HBox.margin>
+                     </TextField>
+                 </children>
+             </HBox>
 
             <Label text="Answer" GridPane.rowIndex="1">
                 <font>
                     <Font size="16.0" />
                 </font>
             </Label>
-             <TextField fx:id="answerTextField" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <TextField fx:id="answerTextField" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
 
             <Label text="Points" GridPane.rowIndex="2">
                 <font>
                     <Font size="16.0" />
                 </font>
             </Label>
+            <TextField fx:id="pointsTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
              <Label text="Timing" GridPane.rowIndex="3">
                  <font>
                     <Font size="16.0" />
                 </font>
              </Label>
-             <Label text="Answered" GridPane.rowIndex="4">
-                 <font>
-                    <Font size="16.0" />
-                </font>
-             </Label>
+             <TextField fx:id="timingTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-            <Button fx:id="deleteButton" onAction="#deleteButton_Click" mnemonicParsing="false" text="Delete" GridPane.rowIndex="6" />
+             <CheckBox fx:id="answeredCheckBox" mnemonicParsing="false" text="Answered" GridPane.rowIndex="4" />
+
+            <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteButton_Click" text="Delete" GridPane.rowIndex="6" />
             <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="6">
                <children>
-                  <Button fx:id="saveButton" onAction="#saveButton_Click" mnemonicParsing="false" text="Save">
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButton_Click" text="Save">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="cancelButton" onAction="#cancelButton_Click" mnemonicParsing="false" text="Cancel" />
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelButton_Click" text="Cancel" />
                </children>
             </HBox>
+
          </children>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
       </GridPane>
    </children>
 </VBox>
