--- a/src/main/resources/fxml/EditorWindow.fxml
+++ b/src/main/resources/fxml/EditorWindow.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -63,9 +62,9 @@
              </Label>
              <TextField fx:id="timingTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-             <CheckBox fx:id="answeredCheckBox" mnemonicParsing="false" text="Answered" GridPane.rowIndex="4" />
+             <CheckBox fx:id="answeredCheckBox" mnemonicParsing="false" text="Answered" GridPane.rowIndex="4" allowIndeterminate="false" />
 
-                              <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteButton_Click" text="Delete" GridPane.rowIndex="6" />
+             <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteButton_Click" text="Delete" GridPane.rowIndex="6" visible="false" />
             <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="6">
                <children>
                   <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButton_Click" text="Save">
