Added cell factory for question boxes, squashed some bugs

--- a/src/main/resources/fxml/PlayerWindow.fxml
+++ b/src/main/resources/fxml/PlayerWindow.fxml
@@ -17,10 +17,8 @@
                 <Font size="24.0" />
              </font>
           </Label>
-          <FlowPane fx:id="questionFlowPane" prefHeight="358.0" prefWidth="275.0" rowValignment="TOP">
-              <GridView fx:id="questionGridView" cellHeight="60" cellWidth="60" />
-          </FlowPane>
-           <Button fx:id="addQuestionButton" onAction="#addQuestionButton_Click" visible="false" text="+" />
+          <GridView fx:id="questionGridView" prefHeight="358.0" prefWidth="275.0" cellHeight="60" cellWidth="60"  />
+          <Button fx:id="addQuestionButton" onAction="#addQuestionButton_Click" visible="false" text="+" />
        </children>
     </VBox>
     <VBox prefHeight="200.0" prefWidth="275.0">
@@ -30,9 +28,7 @@
                 <Font size="24.0" />
              </font>
           </Label>
-          <FlowPane fx:id="screenshotFlowPane" prefHeight="358.0" prefWidth="275.0" rowValignment="TOP">
-              <GridView fx:id="screenshotGridView" cellHeight="60" cellWidth="60" />
-          </FlowPane>
+          <GridView fx:id="screenshotGridView" cellHeight="60" cellWidth="60" />
            <Button fx:id="addScreenshotButton" onAction="#addScreenshotButton_Click" visible="false" text="+" />
        </children>
     </VBox>
@@ -43,9 +39,7 @@
                 <Font size="24.0" />
              </font>
           </Label>
-          <FlowPane fx:id="musicFlowPane" prefHeight="358.0" prefWidth="275.0" rowValignment="TOP">
-              <GridView fx:id="musicGridView" cellHeight="60" cellWidth="60" />
-          </FlowPane>
+          <GridView fx:id="musicGridView" cellHeight="60" cellWidth="60" />
            <Button fx:id="addMusicButton" onAction="#addMusicButton_Click" visible="false" text="+" />
        </children>
     </VBox>
